# electric-tauri-postgres

./: .gitmodules  Makefile  README.md  debug.html  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tauri_postgres.rs  utils.rs
webdriver/selenium/: package-lock.json  package.json
webdriver/selenium/test/: test.js
