[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
pg-embed = { path = "./crates/pg-embed", default-features = true, features = ["rt_tokio", "rt_tokio_migrate"] }
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres"] }
rustyline = "12.0.0"

tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = ["colored"] }
log = "0.4.19"
lazy_static = "1.4.0"
portable-pty = "0.8.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
